# Project-Statecraft

./: .gitignore  .gitmodules  CMakeLists.txt  debug_build.bat  generate.bat  release_build.bat  run_debug.bat
CommonLib/: CMakeLists.txt  pch.hh
CommonLib/source/: AudioBank.cc  Bitmap.cc  Bitmap.hh  CMakeLists.txt  Logging.cc
Editor/source/: CMakeLists.txt
GameRuntime/source/: CMakeLists.txt  pch.hh
GameRuntime/source/Engine/: GameEngine.cc  GameEngine.hh
GameRuntime/source/Engine/Audio/: AudioManager.cc
GameRuntime/source/Engine/Display/: Texture.cc
Toolbox/source/: CMakeLists.txt  Main.cc  app.rc
game/: config.xml
game/textures/: bmtest.bitmap  debugButton.bitmap  loadingIcon.bitmap  test.bitmap
source/: CMakeLists.txt  Main.cc  pch.hh
source/Engine/: GameEngine.cc  GameEngine.hh
source/Engine/Audio/: AudioBank.cc  AudioBank.hh  AudioManager.hh
source/Engine/Core/: Logging.cc  Logging.hh
source/Engine/Display/: Bitmap.cc  Bitmap.hh  Renderer.hh  Texture.cc  Texture.hh  Window.cc  Window.hh
tools/graphics/: bitmap.py  export_info_template
tools/sound/: bankview.py  extractbank.py  soundcrunch.py
